--- a/web_app/static/css/layout.css
+++ b/web_app/static/css/layout.css
@@ -8,7 +8,7 @@
     --footer-height: 10vh;
 
     /* コンテンツ */
-    --content-min-height: 80vh;  /* 100 - 20(header + footer)  = 80 [vh] */
+    --content-min-height: 70vh;  /* 100 - 30(header + footer + margin)  = 70 [vh] */
 
     /* Font */
     --main-font: "M PLUS 1p";
@@ -28,6 +28,7 @@ body {
     font-family: var(--main-font), Avenir, Helvetica, Arial, sans-serif;
     color: var(--black-weak);
     font-weight: var(--weight-middle);
+    font-size: 2vw;
 
     display: grid;
     grid-template:
@@ -46,14 +47,15 @@ body {
     background: var(--header-color);
 
     /* Font */
-    font-weight: var(--black-strong);
-    font-size: 5vh;
+    font-weight: var(--weight-bold);
+    font-size: 5vw;
 }
 
 .content {
     grid-area: content;
 
     min-height: var(--content-min-height);
+    padding: 5vh 5vw;
 }
 
 #footer {
