--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -1,17 +1,30 @@
 {% extends "base.html" %}
 
 {% block external_header %}
-<link rel="stylesheet" type="text/css" href="/static/css/test.css">
 {% endblock %}
 
 {% block title %}年齢診断App{% endblock %}
 
 {% block content %}
-<h1>Test Index Html loaded</h1>
+<div>
+    <!--  サイト説明  -->
+    <p>このサイトでは, 自撮り画像から年齢を推定できるよ</p>
+    <p>あなたの顔は何歳に見えるかな?</p>
+</div>
 
-<p class="target">target text</p>
+<form action="/estimate/" method="POST" class="m-file-form">
+    <div class="m-file-form__input">
+        <label for="face_image_upload" class="m-flex m-flex_center">
+            ファイルを選択してください
+            <input type="file" name="face_image" id="face_image_upload">
+        </label>
+    </div>
+
+    <button type="submit" class="m-primary-button">推定する!</button>
+</form>
+
+
 {% endblock %}
 
 {% block external_footer %}
-<script src="/static/js/test.js"></script>
 {% endblock %}
