--- a/web_app/templates/result.html
+++ b/web_app/templates/result.html
@@ -8,19 +8,20 @@
 {% block content %}
 <h1>診断結果</h1>
 
-<div class="m-flex m-flex_center">
+<div class="flex flex_center">
     <!--  中央寄せのためのラッパー  -->
-    <div class="result m-flex m-flex_center">
+    <div class="result flex flex_center">
         <span class="result__prev">あなたの推定年齢は...</span>
         <span class="result__content">{{ estimated_age }} 歳！！</span>
     </div>
 </div>
 
-<div class="result-image m-flex m-flex_center">
-    <img src="/static/image/仮画像.png" alt="結果画像"/>
+<div class="result-image flex flex_center">
+    <!--    <img src="/static/image/仮画像.png" alt="結果画像"/>-->
+    <img src="{{ result_image_path }}" alt="結果画像"/>
 </div>
 
-<div class="m-flex-column m-flex_center description">
+<div class="flex-column flex_center description">
     <h2>画像の見方</h2>
     <ul>
         <li>説明文</li>
@@ -28,10 +29,11 @@
     </ul>
 </div>
 
-<div class="m-flex m-flex-space-between nav">
+<div class="flex flex-space-between nav">
     <!--  ⇓ 未実装 Link  -->
-    <a class="remove-a-decoration m-primary-button" href="/not_implemented">結果をシェアする</a>
-    <a class="remove-a-decoration m-primary-button" href="/">もう一度診断する</a>
+<!--    <a class="remove-a-decoration primary-button" href="/not_implemented">結果をシェアする</a>-->
+    <a class="remove-a-decoration primary-button" href="https://twitter.com/share?url={{product_url}}&text=年齢推定！あなたの推定年齢は...{{ estimated_age }}歳！">結果をシェアする</a>
+    <a class="remove-a-decoration primary-button" href="/">もう一度診断する</a>
 </div>
 {% endblock %}
 
