--- a/web_app/templates/base.html
+++ b/web_app/templates/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/static/css/normalize.css">
     <link rel="stylesheet" href="/static/css/layout.css">
     <link rel="stylesheet" href="/static/css/module.css">
+    <link rel="stylesheet" href="/static/css/state.css">
 
     {% block external_header %}
     {% endblock %}
