[update] 連携したよ

--- a/web_app/templates/result.html
+++ b/web_app/templates/result.html
@@ -12,7 +12,7 @@
     <!--  中央寄せのためのラッパー  -->
     <div class="result flex flex_center">
         <span class="result__prev">あなたの推定年齢は...</span>
-        <span class="result__content">{{ estimated_age }} 歳！！</span>
+        <span class="result__content">{{ estimated_age }}！！</span>
     </div>
 </div>
 
