--- a/web_app/static/css/layout.css
+++ b/web_app/static/css/layout.css
@@ -39,15 +39,20 @@ body {
 #header {
     grid-area: header;
 
+    /* Font */
+    font-weight: var(--weight-bold);
+    font-size: 3vw;
+}
+
+#header > a {
+    width: 100%;
+    height: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
 
     background: var(--header-color);
-
-    /* Font */
-    font-weight: var(--weight-bold);
-    font-size: 3vw;
 }
 
 .content {
